# advanced_rag

./: .gitignore  README.md  dataset.csv  pyproject.toml
STEPPING/: Advanced_RAG.ipynb  Base_RAG.ipynb  RAG_Query_Translation.ipynb  RAG_Retrieval.ipynb  RAG_Retrieval_Rerank.ipynb  RAG_Routing.ipynb  RAG_Splitting.ipynb
all_ratings/: calculations.ipynb
all_ratings/eval_base_rag/: evaluete_base_rag.csv  evaluete_base_rag_gpt.csv  mean_values.txt  metrics.txt
all_ratings/eval_baserag_big_data/: evaluete_base_rag_big_dataset.csv  metrics.txt
all_ratings/eval_baserag_data/: base_rag_answer.csv  metrics.txt
all_ratings/final_result/: final_step_1.ipynb  final_step_advanced_rag.ipynb  final_step_advanced_rag_mini.ipynb  final_step_query_translation.ipynb  final_step_retrieval.ipynb  final_step_routing.ipynb  metrics_step_1.csv  metrics_step_advanced_RAG.csv  metrics_step_query_translation.csv  (+2 more)
creating_datasets/: creating_big_dataset.ipynb  creating_middle_dataset.ipynb  creating_small_dataset.ipynb  dataset_big.csv  dataset_small.csv
evaluete_rag/: evaluete_rag.ipynb  evaluete_rag_other_metrics.ipynb  human_metric.ipynb  necessity.py
generating_answers_to_questions/: base_rag_get_answer_dataset.ipynb  baserag.py  docs_html.json  necessity.py  rag_1_3.py  rag_step_1_1_get_answer_dataset.ipynb  rag_step_1_2_get_answer_dataset.ipynb  rag_step_1_3_1_get_answer_dataset.ipynb  rag_step_1_3_get_answer_dataset.ipynb  smart_chunks_100.json  smart_chunks_150.json  smart_chunks_200.json
my_library/: format_docs.py  smart_html_splits.py  summarization.py
(+68 files in other folders)
